<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SessionsFragment">

    <fragment
        android:id="@+id/SessionsFragment"
        android:name="com.example.hibreed.SessionsFragment"
        android:label="@string/sessions_title"
        tools:layout="@layout/fragment_sessions">

        <action
            android:id="@+id/action_SessionsFragment_to_LogFragment"
            app:destination="@id/LogFragment" />
    </fragment>

    <fragment
        android:id="@+id/LogFragment"
        android:name="com.example.hibreed.LogFragment"
        android:label="@string/log_title"
        tools:layout="@layout/fragment_log">

        <argument
            android:name="workoutId"
            android:defaultValue="0L"
            app:argType="long" />

        <action
            android:id="@+id/action_LogFragment_to_ExercisePickerFragment"
            app:destination="@id/ExercisePickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/ExercisePickerFragment"
        android:name="com.example.hibreed.ExercisePickerFragment"
        android:label="@string/pick_exercise_title"
        tools:layout="@layout/fragment_exercise_picker" />
</navigation>
